fix: fix padding. add gap between card elements

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -4,5 +4,8 @@
   box-shadow: 0px 0px 7px rgba(49, 49, 49, 0.1);
   width: 100%;
   height: 100%;
-  padding: 80px;
+  padding: 64px 80px;
+  display: flex;
+  flex-direction: column;
+  gap: 43px;
 }
